many bugfixes